# M3MF

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  M3MF_version.info  README.md  build.py
cmake/: compiler_config.cmake  fmt.cmake
cmake/modules/: FindMaya.cmake
docs/: build.md
plugin/: CMakeLists.txt
plugin/3dsmax/: CMakeLists.txt
plugin/3dsmax/common/: CMakeLists.txt  types.h  utility.cpp  utility.h
plugin/3dsmax/read/: CMakeLists.txt  DllEntry.cpp  ThreeMFImport.cpp  ThreeMFImport.def  ThreeMFImport.h  ThreeMFImport.rc  resource.h
plugin/3dsmax/write/: CMakeLists.txt  DllEntry.cpp  ThreeMFExport.cpp  ThreeMFExport.def  ThreeMFExport.h  ThreeMFExport.rc  resource.h
plugin/maya/: CMakeLists.txt  M3MF.mod.template  debugOstream.h  main.cpp  types.h  utility.cpp  utility.h
plugin/maya/read/: CMakeLists.txt  import.cpp  import.h  importCommand.cpp  importCommand.h  importTranslator.cpp  importTranslator.h
plugin/maya/write/: CMakeLists.txt  export.cpp  export.h  exportCommand.cpp  exportCommand.h  exportTranslator.cpp  exportTranslator.h
