# ---------------------------------------------------------------------------------
# projects Settings
# ---------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.15...3.20)

project(M3MF)

#----------------------------------------------------------------------------------
# options
#----------------------------------------------------------------------------------
option(BUILD_STRICT_MODE "Enforce all warnings as errors." ON)
option(BUILD_3DSMAX_PLUGIN "Build 3MF plugin for Autodesk 3DSMAX." ON)
option(BUILD_MAYA_PLUGIN "Build 3MF plugin for Autodesk Maya" ON)

# ---------------------------------------------------------------------------------
# version
# ---------------------------------------------------------------------------------
include(M3MF_version.info)
set(M3MF_VERSION "${M3MF_MAJOR_VERSION}.${M3MF_MINOR_VERSION}.${M3MF_PATCH_LEVEL}")

# ---------------------------------------------------------------------------------
# module
# ---------------------------------------------------------------------------------
set(CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules
)

include(cmake/fmt.cmake)

# ---------------------------------------------------------------------------------
# compiler configuration
# ---------------------------------------------------------------------------------
include(cmake/compiler_config.cmake)

# ---------------------------------------------------------------------------------
# lib3mf
# ---------------------------------------------------------------------------------
set(LIB3MF_DIR ${CMAKE_SOURCE_DIR}/thirdParty/lib3mf-2.1.0)
add_subdirectory(${LIB3MF_DIR} ${CMAKE_CURRENT_BINARY_DIR}/lib3MF)
set(LIB3MF_INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/lib3MF/Autogenerated/Bindings/Cpp)

# ---------------------------------------------------------------------------------
# plugins
# ---------------------------------------------------------------------------------
add_subdirectory(plugin)
